<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >




    <LinearLayout
        android:id="@+id/child1_search_titlebar"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="@drawable/d_back"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/child_search_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="20sp" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/child1_search_content"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/child1_search_from"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/child_search_from"
            android:textColor="@color/black" />

        <AutoCompleteTextView
            android:id="@+id/edit_geton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="10"
            android:hint="@string/child1_hint_from"
            android:inputType="text" />

        <TextView
            android:id="@+id/child1_search_to"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/child_search_to"
            android:textColor="@color/black" />

        <AutoCompleteTextView
            android:id="@+id/edit_getoff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="10"
            android:hint="@string/child1_hint_from"
            android:inputType="text" />

        <Button
            android:id="@+id/button_search"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:background="@drawable/button_search"
            android:text="@string/child_search_search" />

    </LinearLayout>

</LinearLayout>