<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <!-- Android4.0でなぜかレイアウトが崩れる。この画面のみ、汚いレイアウトだがこれが何とか崩れないレイアウト -->




    <LinearLayout
        android:id="@+id/child1_result_titlebar"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="@drawable/d_back"
        android:orientation="horizontal" >




        <LinearLayout
            android:id="@+id/child1_result_dummy"
            android:layout_width="0px"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:orientation="vertical" >

        </LinearLayout>


        <LinearLayout
            android:layout_width="0px"
            android:layout_height="fill_parent"
            android:layout_weight="3"
            android:orientation="vertical" >


            <TextView
                android:id="@+id/child1_result_title_text"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="20sp" />

        </LinearLayout>

        <ImageButton
            android:id="@+id/button_result_addbookmark"
            android:layout_width="0px"
            android:layout_height="fill_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@null"
            android:contentDescription="@string/child_result_addbookmark"
            android:src="@android:drawable/ic_input_add" />

    </LinearLayout>







    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="@drawable/button_gray"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="5dp" >

        <Button
            android:id="@+id/button_weekday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/child_result_weekday"
            android:background="@drawable/button_weekday"
            android:textSize="20sp"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/button_saturday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/child_result_saturday"
            android:background="@drawable/button_saturday"
            android:textSize="20sp"
            android:textColor="@color/white" />



        <Button
            android:id="@+id/button_holiday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:text="@string/child_result_holiday"
            android:textColor="@color/white"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="@drawable/button_gray"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="5dp" >

        <Button
            android:id="@+id/button_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:text="@string/child_result_all"
            android:textColor="@color/white"
            android:textSize="25dp" />

        <Button
            android:id="@+id/button_bytime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:text="@string/child_result_bytime"
            android:textColor="@color/white"
            android:textSize="25dp" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:orientation="horizontal" >

        <ListView
            android:id="@+id/listView1"
            android:layout_width="fill_parent"
            android:layout_height="200dp"
            android:scrollingCache="false" >

    	</ListView>
    </LinearLayout>

</LinearLayout>